--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       #map_canvas { height: 100% }
     </style>
   </head>
-  <body onload="initialize()">
+  <body>
     <div id="map_canvas" style="width:100%; height:100%"></div>
   </body>
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
@@ -16,18 +16,28 @@
       src="http://maps.googleapis.com/maps/api/js?sensor=false">
     </script>
     <script type="text/javascript">
-        $(function() {
-             // Handler for .ready() called.
-        });
+        var myOptions;
+        function initialize() {
+            var map = new google.maps.Map(document.getElementById("map_canvas"),
+                myOptions);
+        }
+        function drawPlayer() {
+             
 
-      function initialize() {
-        var myOptions = {
-          center: new google.maps.LatLng(-34.397, 150.644),
-          zoom: 8,
-          mapTypeId: google.maps.MapTypeId.ROADMAP
-        };
-        var map = new google.maps.Map(document.getElementById("map_canvas"),
-            myOptions);
-      }
+        }
+        $(function() {
+            $.getJSON('serverResponse.json', function(data) {
+console.log(data);
+                myOptions = {
+                  center: new google.maps.LatLng(parseFloat(data.playground[0].lat), parseFloat(data.playground[0].lng)),
+                  zoom: 15,
+                  mapTypeId: google.maps.MapTypeId.ROADMAP
+                };
+console.log(myOptions);
+                initialize();
+                                             
+
+            });
+        });
     </script>
 </html>
