--- a/index.html
+++ b/index.html
@@ -17,29 +17,37 @@
       src="http://maps.googleapis.com/maps/api/js??libraries=geometry,drawing&sensor=false">
     </script>
     <script type="text/javascript">
-        var myOptions;
+        var map,
+            coordinates,
+            myOptions;
         function initialize() {
-            var map = new google.maps.Map(document.getElementById("map_canvas"),
+            map = new google.maps.Map(document.getElementById("map_canvas"),
                 myOptions);
         }
-        function drawPlayer() {
-                     
-
+        function drawPlayer(polyline) {
+            coordinates = new Array(); 
+           $.each(polyline,function(key,value) {
+                coordinates[key] = new google.maps.LatLng(value.lat, value.long);        
+           });
+            var path = new google.maps.Polyline({
+                path: coordinates,
+                strokeColor: "#FF0000",
+                strokeOpacity: 1.0,
+                strokeWeight: 2
+          });
+             path.setMap(map);
         }
         $(function() {
             $.getJSON('serverResponseHashY.json', function(data) {
-console.log(data);
                 var playground = decodeLine(data.playground);
-console.log(playground);
                 myOptions = {
                   center: new google.maps.LatLng(playground[0][0], playground[0][1]),
                   zoom: 15,
                   mapTypeId: google.maps.MapTypeId.ROADMAP
                 };
-console.log(myOptions);
                 initialize();
                 $.each(data.players, function(key, value) {
-                            
+                   drawPlayer(value.polyline);                      
                 })                         
             });
         });
