--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
+<meta http-equiv="refresh" content="5">
     <style type="text/css">
       html { height: 100% }
       body { height: 100%; margin: 0; padding: 0 }
@@ -42,7 +43,7 @@
                 var playground = decodeLine(data.playground);
                 myOptions = {
                   center: new google.maps.LatLng(playground[0][0], playground[0][1]),
-                  zoom: 15,
+                  zoom: 12,
                   mapTypeId: google.maps.MapTypeId.ROADMAP
                 };
                 initialize();
