--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
-<meta http-equiv="refresh" content="5">
+<!-- <meta http-equiv="refresh" content="5"> -->
     <style type="text/css">
       html { height: 100% }
       body { height: 100%; margin: 0; padding: 0 }
@@ -39,7 +39,8 @@
              path.setMap(map);
         }
         $(function() {
-            $.getJSON('serverResponseHashY.json', function(data) {
+            $.getJSON('http://ec2-54-247-150-122.eu-west-1.compute.amazonaws.com:8080/', function(data) {
+console.log(data);
                 var playground = decodeLine(data.playground);
                 myOptions = {
                   center: new google.maps.LatLng(playground[0][0], playground[0][1]),
@@ -48,7 +49,9 @@
                 };
                 initialize();
                 $.each(data.players, function(key, value) {
-                   drawPlayer(value.polyline);                      
+                    try {
+                      drawPlayer(value.polyline);
+                    } catch (err) {}
                 })                         
             });
         });
