--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
-<!-- <meta http-equiv="refresh" content="5"> -->
+     <meta http-equiv="refresh" content="15">
     <style type="text/css">
       html { height: 100% }
       body { height: 100%; margin: 0; padding: 0 }
@@ -25,14 +25,14 @@
             map = new google.maps.Map(document.getElementById("map_canvas"),
                 myOptions);
         }
-        function drawPlayer(polyline) {
+        function drawPlayer(polyline,color) {
             coordinates = new Array(); 
            $.each(polyline,function(key,value) {
                 coordinates[key] = new google.maps.LatLng(value.lat, value.long);        
            });
             var path = new google.maps.Polyline({
                 path: coordinates,
-                strokeColor: "#FF0000",
+                strokeColor: color,
                 strokeOpacity: 1.0,
                 strokeWeight: 2
           });
@@ -43,14 +43,18 @@
 console.log(data);
                 var playground = decodeLine(data.playground);
                 myOptions = {
-                  center: new google.maps.LatLng(playground[0][0], playground[0][1]),
-                  zoom: 12,
+                  center: new google.maps.LatLng(playground[0][0]+0.005, playground[0][1]),
+                  zoom: 16,
                   mapTypeId: google.maps.MapTypeId.ROADMAP
                 };
                 initialize();
                 $.each(data.players, function(key, value) {
+                    var color = "#00ff00";
+                    if(key == 1) {
+                        color = "#ff0000";
+                    } 
                     try {
-                      drawPlayer(value.polyline);
+                      drawPlayer(value.polyline,color);
                     } catch (err) {}
                 })                         
             });
